--- a/place1.css
+++ b/place1.css
@@ -5,13 +5,165 @@
   scroll-behavior: smooth;
 }
 
-.header__head {
-  align-items: center;
+body {
+  background-color: #f6f6f6;
 }
-.header__head > img {
-  text-align: center;
-  width: 200px;
+
+.header__top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__top--back {
+  position: absolute;
+  left: 0;
+  padding: 1.5rem;
+  font-size: 1.3em;
+  text-decoration: none;
+  color: #353535;
+}
+.header__top > img {
   padding: 1.5rem 0 1rem 0;
+}
+.header__cover {
+  margin-top: -2rem;
+  display: block;
+  padding-top: 2rem;
+  width: 100%;
+}
+.header__cover > img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.order {
+  position: relative;
+  transform: translateY(-80px);
+  background-color: #f6f6f6;
+  padding: 2.2rem 1.2rem;
+  border-radius: 35px 35px 0 0;
+}
+.order__top {
+  display: flex;
+  justify-content: space-between;
+}
+.order__top > h1 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.75em;
+  font-weight: 400;
+}
+.order__top > .heart {
+  transform: translateY(8px);
+  font-size: 1.5em;
+  padding-right: 1rem;
+  height: 18px;
+  width: 16px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.order__top > .heart > .far + .fas {
+  position: absolute;
+}
+.order__top > .heart > .fas {
+  opacity: 0;
+  color: #9356dc;
+  transition: 0.2s ease-in-out;
+}
+.order__top > .heart:hover .far {
+  opacity: 0;
+  transition-duration: 0.2s;
+}
+.order__top > .heart:hover > .fas {
+  transform: scale(1.2);
+  display: flex;
+  position: absolute;
+  cursor: pointer;
+  opacity: 1;
+  transition: 0.2s ease-in-out;
+  background-image: linear-gradient(to top right, #ff79da, #9356dc);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.order .repas {
+  padding-top: 2rem;
+}
+.order .repas__title > h2 {
+  font-size: 1.2em;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+.order .repas__title--underline {
+  width: 48px;
+  height: 3px;
+  background-color: #99e2d0;
+  margin: 5px 0 1.2rem 0;
+}
+.order .repas__card {
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
+  overflow: hidden;
+  position: relative;
+  text-decoration: none;
+  color: black;
+}
+.order .repas__card:hover {
+  cursor: pointer;
+}
+.order .repas__card:hover .price {
+  margin-right: 65px;
+  transition: 0.4s ease-in-out;
+}
+.order .repas__card:hover .repas__card--info--check {
+  transform: translateX(0px);
+  transition: 0.4s ease-in-out;
+}
+.order .repas__card:hover .repas__card--info--checkicon {
+  transform: rotate(2turn);
+  transition: 0.4s;
+}
+.order .repas__card > .price {
+  font-weight: 500;
+  transition: 0.4s ease-in-out;
+}
+.order .repas__card--info {
+  line-height: 1.8em;
+}
+.order .repas__card--info > h2 {
+  font-size: 1.2em;
+  font-weight: 600;
+}
+.order .repas__card--info > p {
+  font-size: 1em;
+  font-weight: 100;
+}
+.order .repas__card--info--check {
+  transform: translateX(70px);
+  transition: 0.4s ease-in-out;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #99e2d0;
+  padding: 2.1rem 1.4rem;
+}
+.order .repas__card--info--checkicon {
+  font-size: 0.8em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #99e2d0;
+  background: white;
+  padding: 7px 6px 6px 6px;
+  border-radius: 50%;
 }
 
 .footer {
