--- a/sass/place1.scss
+++ b/sass/place1.scss
@@ -4,24 +4,186 @@
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
 }
+body {
+  background-color: #f6f6f6;
+}
 
 $font-title: "Shrikhand", cursive;
 $text-desc: #353535;
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
+$color-tertiary: #99e2d0;
 $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 
 .header {
-  &__head {
+  &__top {
+    display: flex;
     align-items: center;
+    justify-content: center;
+    &--back {
+      position: absolute;
+      left: 0;
+      padding: 1.5rem;
+      font-size: 1.3em;
+      text-decoration: none;
+      color: $text-desc;
+    }
     > img {
-      text-align: center;
-      width: 200px;
       padding: 1.5rem 0 1rem 0;
+    }
+  }
+  &__cover {
+    margin-top: -2rem;
+    display: block;
+    padding-top: 2rem;
+    width: 100%;
+    > img {
+      width: 100%;
+      object-fit: cover;
     }
   }
 }
 
+.order {
+  position: relative;
+  transform: translateY(-80px);
+  background-color: #f6f6f6;
+  padding: 2.2rem 1.2rem;
+  border-radius: 35px 35px 0 0;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    > h1 {
+      font-family: $font-title;
+      font-size: 1.75em;
+      font-weight: 400;
+    }
+    > .heart {
+      transform: translateY(8px);
+      font-size: 1.5em;
+      padding-right: 1rem;
+      height: 18px;
+      width: 16px;
+      display: flex;
+      position: relative;
+      justify-content: center;
+
+      > .far + .fas {
+        position: absolute;
+      }
+      > .fas {
+        opacity: 0;
+        color: $color-primary;
+        transition: 0.2s ease-in-out;
+      }
+      &:hover .far {
+        opacity: 0;
+        transition-duration: 0.2s;
+      }
+      &:hover > .fas {
+        transform: scale(1.2);
+        display: flex;
+        position: absolute;
+        cursor: pointer;
+        opacity: 1;
+        transition: 0.2s ease-in-out;
+        background-image: linear-gradient(
+          to top right,
+          $color-secondary,
+          $color-primary
+        );
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+    }
+  }
+  .repas {
+    padding-top: 2rem;
+
+    &__title {
+      > h2 {
+        font-size: 1.2em;
+        font-weight: 100;
+        text-transform: uppercase;
+      }
+      &--underline {
+        width: 48px;
+        height: 3px;
+        background-color: $color-tertiary;
+        margin: 5px 0 1.2rem 0;
+      }
+    }
+    &__card {
+      &:hover {
+        cursor: pointer;
+      }
+      &:hover {
+        .price {
+          margin-right: 65px;
+          transition: 0.4s ease-in-out;
+        }
+        .repas__card--info--check {
+          transform: translateX(0px);
+          transition: 0.4s ease-in-out;
+        }
+        .repas__card--info--checkicon {
+          transform: rotate(2turn);
+          transition: 0.4s;
+        }
+      }
+      background-color: #fff;
+      border-radius: 15px;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      box-shadow: $shadow-card;
+      overflow: hidden;
+      position: relative;
+      text-decoration: none;
+      color: black;
+      > .price {
+        font-weight: 500;
+        transition: 0.4s ease-in-out;
+      }
+
+      &--info {
+        line-height: 1.8em;
+        > h2 {
+          font-size: 1.2em;
+          font-weight: 600;
+        }
+        > p {
+          font-size: 1em;
+          font-weight: 100;
+        }
+        &--check {
+          transform: translateX(70px);
+          transition: 0.4s ease-in-out;
+          position: absolute;
+          right: 0;
+          top: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: $color-tertiary;
+          padding: 2.1rem 1.4rem;
+          &icon {
+            font-size: 0.8em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: $color-tertiary;
+            background: white;
+            padding: 7px 6px 6px 6px;
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+  }
+}
 // Footer
 
 .footer {
