--- a/place1.css
+++ b/place1.css
@@ -101,6 +101,8 @@ body {
   margin: 5px 0 1.2rem 0;
 }
 .order .repas__card {
+  animation: move-card 1s cubic-bezier(0, 0, 0, 1) forwards;
+  opacity: 0;
   background-color: #fff;
   border-radius: 15px;
   padding: 1rem;
@@ -112,6 +114,7 @@ body {
   position: relative;
   text-decoration: none;
   color: black;
+  margin-bottom: 1rem;
 }
 .order .repas__card:hover {
   cursor: pointer;
@@ -128,9 +131,17 @@ body {
   transform: rotate(2turn);
   transition: 0.4s;
 }
+.order .repas__card > .card1 {
+  animation-delay: 0.16s;
+}
+.order .repas__card > .card2 {
+  animation-delay: 0.33s;
+}
 .order .repas__card > .price {
   font-weight: 500;
   transition: 0.4s ease-in-out;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .order .repas__card--info {
   line-height: 1.8em;
@@ -138,10 +149,14 @@ body {
 .order .repas__card--info > h2 {
   font-size: 1.2em;
   font-weight: 600;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .order .repas__card--info > p {
   font-size: 1em;
   font-weight: 100;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .order .repas__card--info--check {
   transform: translateX(70px);
@@ -153,7 +168,8 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #99e2d0;
-  padding: 2.1rem 1.4rem;
+  padding: 0 1.4rem;
+  height: 100%;
 }
 .order .repas__card--info--checkicon {
   font-size: 0.8em;
@@ -166,6 +182,15 @@ body {
   border-radius: 50%;
 }
 
+@keyframes move-card {
+  0% {
+    opacity: 0;
+    transform: translateY(45px);
+  }
+  100% {
+    opacity: 100;
+  }
+}
 .footer {
   background-color: #353535;
   display: flex;
