--- a/place1.css
+++ b/place1.css
@@ -89,6 +89,11 @@ body {
 .order .repas {
   padding-top: 2rem;
 }
+.order .repas__starter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .order .repas__title > h2 {
   font-size: 1.2em;
   font-weight: 100;
@@ -101,17 +106,17 @@ body {
   margin: 5px 0 1.2rem 0;
 }
 .order .repas__card {
+  position: relative;
+  top: 45px;
+  overflow: hidden;
+  margin-bottom: 12px;
+  padding: 12px;
   animation: move-card 1s cubic-bezier(0, 0, 0, 1) forwards;
   opacity: 0;
   background-color: #fff;
   border-radius: 15px;
   padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
-  overflow: hidden;
-  position: relative;
   text-decoration: none;
   color: black;
   margin-bottom: 1rem;
@@ -137,18 +142,30 @@ body {
 .order .repas__card > .card2 {
   animation-delay: 0.33s;
 }
-.order .repas__card > .price {
-  font-weight: 500;
-  transition: 0.4s ease-in-out;
+.order .repas__card > .card3 {
+  animation-delay: 0.66s;
+}
+.order .repas__card > h2 {
+  font-size: 1.2em;
+  font-weight: 600;
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 .order .repas__card--info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   line-height: 1.8em;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
-.order .repas__card--info > h2 {
-  font-size: 1.2em;
-  font-weight: 600;
+.order .repas__card--info > .price {
+  font-weight: 500;
+  transition: 0.4s ease-in-out;
+  display: block;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
@@ -157,6 +174,7 @@ body {
   font-weight: 100;
   white-space: nowrap;
   text-overflow: ellipsis;
+  overflow: hidden;
 }
 .order .repas__card--info--check {
   transform: translateX(70px);
@@ -185,10 +203,10 @@ body {
 @keyframes move-card {
   0% {
     opacity: 0;
-    transform: translateY(45px);
   }
   100% {
     opacity: 100;
+    transform: translateY(-45px);
   }
 }
 .footer {
