--- a/sass/place1.scss
+++ b/sass/place1.scss
@@ -100,7 +100,11 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   }
   .repas {
     padding-top: 2rem;
-
+    &__starter {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
     &__title {
       > h2 {
         font-size: 1.2em;
@@ -132,17 +136,17 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
           transition: 0.4s;
         }
       }
+      position: relative;
+      top: 45px;
+      overflow: hidden;
+      margin-bottom: 12px;
+      padding: 12px;
       animation: move-card 1s cubic-bezier(0, 0, 0, 1) forwards;
       opacity: 0;
       background-color: #fff;
       border-radius: 15px;
       padding: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
       box-shadow: $shadow-card;
-      overflow: hidden;
-      position: relative;
       text-decoration: none;
       color: black;
       margin-bottom: 1rem;
@@ -152,29 +156,39 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       > .card2 {
         animation-delay: 0.33s;
       }
-      > .price {
-        font-weight: 500;
-        transition: 0.4s ease-in-out;
+      > .card3 {
+        animation-delay: 0.66s;
+      }
 
+      > h2 {
+        font-size: 1.2em;
+        font-weight: 600;
+        overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
       }
-
       &--info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
         line-height: 1.8em;
-        > h2 {
-          font-size: 1.2em;
-          font-weight: 600;
-
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        > .price {
+          font-weight: 500;
+          transition: 0.4s ease-in-out;
+          display: block;
           white-space: nowrap;
           text-overflow: ellipsis;
         }
         > p {
           font-size: 1em;
           font-weight: 100;
-
           white-space: nowrap;
           text-overflow: ellipsis;
+          overflow: hidden;
         }
         &--check {
           transform: translateX(70px);
@@ -207,10 +221,11 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 @keyframes move-card {
   0% {
     opacity: 0;
-    transform: translateY(45px);
   }
   100% {
     opacity: 100;
+
+    transform: translateY(-45px);
   }
 }
 // Footer
