--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,12 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  > .logo {
+    align-self: center;
+    align-self: center;
+    width: 200px;
+    padding: 1.5rem 0 1rem 0;
+  }
   &__location {
     display: flex;
     justify-content: center;
@@ -31,11 +37,6 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       color: #353535;
       text-shadow: 0px 0px 0px #626262;
     }
-  }
-  & img {
-    align-self: center;
-    width: 200px;
-    padding: 1.5rem 0 1rem 0;
   }
   &__book {
     background-color: #f6f6f6;
