--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
   justify-content: center;
   flex-direction: column;
 }
+.header > .logo {
+  align-self: center;
+  align-self: center;
+  width: 200px;
+  padding: 1.5rem 0 1rem 0;
+}
 .header__location {
   display: flex;
   justify-content: center;
@@ -26,11 +32,6 @@
   transform: translateY(-2px) translateX(-20px);
   color: #353535;
   text-shadow: 0px 0px 0px #626262;
-}
-.header img {
-  align-self: center;
-  width: 200px;
-  padding: 1.5rem 0 1rem 0;
 }
 .header__book {
   background-color: #f6f6f6;
