--- a/place2.css
+++ b/place2.css
@@ -147,6 +147,9 @@ body {
 .order .repas__starter > .card9 {
   animation-delay: 2.66s;
 }
+.order .repas__starter > .card10 {
+  animation-delay: 2.99s;
+}
 .order .repas__title > h2 {
   font-size: 1.2em;
   font-weight: 100;
@@ -308,4 +311,4 @@ body {
   transition-duration: 0.2s;
 }
 
-/*# sourceMappingURL=place1.css.map */
+/*# sourceMappingURL=place2.css.map */
