--- a/sass/place2.scss
+++ b/sass/place2.scss
@@ -164,6 +164,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       > .card9 {
         animation-delay: 2.66s;
       }
+      > .card10 {
+        animation-delay: 2.99s;
+      }
     }
     &__title {
       > h2 {
