--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,6 +37,14 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       color: #353535;
       text-shadow: 0px 0px 0px #626262;
     }
+    @media screen and (min-width: 702px) {
+      position: absolute;
+      top: 1rem;
+      left: 2rem;
+      width: fit-content;
+      padding: 1rem 0.8rem 1rem 1.8rem;
+      border-radius: 14px;
+    }
   }
   &__book {
     background-color: #f6f6f6;
@@ -52,6 +60,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     > p {
       color: $text-desc;
       font-size: 1.1em;
+    }
+    @media screen and (min-width: 702px) {
+      box-shadow: inset 0px 20px 15px -20px #bdbcbc;
     }
   }
   &--btn {
@@ -85,12 +96,28 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 .tuto {
   &__title {
     margin: 3rem 1.5rem;
+    @media screen and (min-width: 900px) {
+      display: flex;
+      justify-content: center;
+    }
   }
   &__cards {
     margin: 2.5rem 1rem 0 1.2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (min-width: 900px) {
+      display: grid;
+      justify-content: center;
+      grid-template-columns: 0.5fr 1fr 1fr 1fr 0.5fr;
+      box-sizing: border-box;
+      margin: auto;
+      max-width: 1440px;
+    }
+  }
+
+  &__card1 {
+    grid-column-start: 2;
   }
   &__card {
     display: flex;
@@ -102,6 +129,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     border-radius: 20px;
     box-shadow: $shadow-card;
     transition: 0.2s ease-in-out;
+    @media screen and (min-width: 900px) {
+      padding: 5rem 1rem;
+    }
     &:hover {
       cursor: pointer;
       background-color: #9256dc1a;
@@ -141,6 +171,10 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   background-color: #f6f6f6;
   margin-top: 3rem;
   padding: 3rem 1.5rem;
+  > h2 {
+    display: flex;
+    justify-content: center;
+  }
   &__cards {
     &--card > img {
       width: 100%;
@@ -178,6 +212,20 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
         box-shadow: rgba(0, 0, 0, 0.4) 0px 12px 28px 0px,
           rgba(0, 0, 0, 0.1) 0px 2px 4px 0px;
       }
+    }
+    &--card1 {
+      grid-column-start: 2;
+    }
+    &--card2 {
+      grid-column-start: 3;
+    }
+    &--card3 {
+      grid-column-start: 2;
+      grid-row-start: 2;
+    }
+    &--card4 {
+      grid-column-start: 3;
+      grid-row-start: 2;
     }
     &--info {
       padding: 0.8rem;
@@ -227,65 +275,80 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
         }
       }
     }
+    @media screen and (min-width: 702px) {
+      max-width: 1440px;
+      display: grid;
+      justify-content: center;
+      grid-template-columns: 1fr 40% 40% 1fr;
+      grid-column-gap: 3rem;
+      margin: auto;
+    }
   }
 }
 .footer {
   background-color: #353535;
-  display: flex;
-  flex-direction: column;
-  padding: 1.8rem 1.8rem 4rem 1.8rem;
-  > h2 {
-    padding-bottom: 1rem;
-    transition-duration: 0.2s;
-    width: fit-content;
-    > a {
-      text-decoration: none;
-      width: fit-content;
-      color: white;
-      font-family: $font-title;
-      font-weight: 100;
-      font-size: 1.5em;
-    }
-    &:hover {
-      cursor: pointer;
-      transform: scale(1.02);
-      transition-duration: 0.2s;
-      background-image: linear-gradient(
-        to right,
-        $color-secondary,
-        $color-primary
-      );
-      background-size: 100%;
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      -moz-text-fill-color: transparent;
-    }
-  }
-
-  &__link {
-    display: flex;
-    flex-direction: column;
-    font-size: 1.2em;
-    line-height: 2rem;
-    > a {
-      text-decoration: none;
-      color: white;
+  &__block {
+    padding: 1.8rem 1.8rem 4rem 1.8rem;
+    > h2 {
+      padding-bottom: 1rem;
       transition-duration: 0.2s;
       width: fit-content;
-      > i {
-        font-size: 18px;
-      }
-      > .fa-utensils {
-        padding-right: 1rem;
-      }
-      > .fa-hands-helping {
-        padding-right: 0.55rem;
+      > a {
+        text-decoration: none;
+        width: fit-content;
+        color: white;
+        font-family: $font-title;
+        font-weight: 100;
+        font-size: 1.5em;
       }
       &:hover {
-        color: $color-primary;
+        cursor: pointer;
+        transform: scale(1.02);
         transition-duration: 0.2s;
+        background-image: linear-gradient(
+          to right,
+          $color-secondary,
+          $color-primary
+        );
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-text-fill-color: transparent;
       }
+    }
+
+    &--link {
+      display: flex;
+      flex-direction: column;
+      font-size: 1.2em;
+      line-height: 2rem;
+      > a {
+        text-decoration: none;
+        color: white;
+        transition-duration: 0.2s;
+        width: fit-content;
+        > i {
+          font-size: 18px;
+        }
+        > .fa-utensils {
+          padding-right: 1rem;
+        }
+        > .fa-hands-helping {
+          padding-right: 0.55rem;
+        }
+        &:hover {
+          color: $color-primary;
+          transition-duration: 0.2s;
+        }
+      }
+    }
+    @media screen and (min-width: 702px) {
+      max-width: 1440px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: auto;
     }
   }
 }
