--- a/sass/place1.scss
+++ b/sass/place1.scss
@@ -230,9 +230,6 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
         > .price {
           font-weight: 500;
           transition: 0.4s ease-in-out;
-          display: block;
-          white-space: nowrap;
-          text-overflow: ellipsis;
         }
         > p {
           font-size: 1em;
@@ -265,6 +262,15 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
           }
         }
       }
+    }
+  }
+
+  .menu {
+    @media screen and (min-width: 1200px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 2rem;
+      // 1380px
     }
   }
 }
