--- a/sass/style.scss
+++ b/sass/style.scss
@@ -344,10 +344,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       }
     }
     @media screen and (min-width: 702px) {
-      max-width: 1440px;
+      width: 1440px;
       display: flex;
       flex-direction: column;
-      align-items: center;
       margin: auto;
     }
   }
