--- a/style.css
+++ b/style.css
@@ -328,10 +328,9 @@
 }
 @media screen and (min-width: 702px) {
   .footer__block {
-    max-width: 1440px;
+    width: 1440px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin: auto;
   }
 }
