--- a/place1.css
+++ b/place1.css
@@ -6,35 +6,39 @@
 }
 
 body {
-  background-color: #f6f6f6;
+  background-color: #fff;
 }
 
 .header__top {
-  display: flex;
+  display: grid;
   align-items: center;
-  justify-content: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1440px;
+  margin: auto;
 }
 .header__top--back {
-  position: absolute;
-  left: 0;
+  grid-column-start: 1;
   padding: 1.5rem;
   font-size: 1.3em;
   text-decoration: none;
   color: #353535;
 }
 .header__top > img {
+  grid-column-start: 2;
   padding: 1.5rem 0 1rem 0;
+  margin: auto;
 }
 .header__cover {
   margin-top: -2rem;
   display: block;
   padding-top: 2rem;
   width: 100%;
+  overflow: hidden;
 }
 .header__cover > img {
-  height: 300px;
   width: 100%;
   object-fit: cover;
+  max-height: 550px;
 }
 
 .order {
@@ -43,7 +47,8 @@ body {
   background-color: #f6f6f6;
   padding: 2.2rem 1.2rem;
   border-radius: 35px 35px 0 0;
-  margin-bottom: -60px;
+  max-width: 1300px;
+  margin: auto auto -80px auto;
 }
 .order__btn {
   display: flex;
@@ -51,7 +56,7 @@ body {
   align-items: center;
 }
 .order__btn--order {
-  margin-top: 30px;
+  margin: 5rem 0 5rem 0;
   border: none;
   border-radius: 100px;
   font-size: 1.1em;
@@ -240,11 +245,18 @@ body {
   padding: 7px 6px 6px 6px;
   border-radius: 50%;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 600px) and (max-width: 1380px) {
+  .order {
+    width: 550px;
+    margin: auto;
+    margin-bottom: -80px;
+  }
+}
+@media screen and (min-width: 1380px) {
   .order .menu {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 2rem;
+    column-gap: 5rem;
   }
 }
 
