--- a/place1.css
+++ b/place1.css
@@ -197,9 +197,6 @@ body {
 .order .repas__card > h2 {
   font-size: 1.2em;
   font-weight: 600;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 .order .repas__card--info {
   display: flex;
@@ -207,11 +204,13 @@ body {
   justify-content: space-between;
   align-items: center;
   line-height: 1.8em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 .order .repas__card--info > .price {
+  padding: 0 1rem 0 0.3rem;
+  position: absolute;
+  background-color: #fff;
+  right: 0;
+  bottom: 0.95rem;
   font-weight: 500;
   transition: 0.4s ease-in-out;
 }
@@ -257,6 +256,9 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 5rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
@@ -271,23 +273,34 @@ body {
 }
 .footer {
   background-color: #353535;
-  display: flex;
-  flex-direction: column;
   padding: 1.8rem 1.8rem 4rem 1.8rem;
 }
-.footer > h2 {
-  padding-bottom: 1rem;
+.footer__block {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1440px;
+  margin: auto;
+}
+.footer__link {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2em;
+  line-height: 2rem;
+}
+.footer__link--title > h2 {
+  padding: 1rem 0.5rem 1rem 0;
   transition-duration: 0.2s;
   width: fit-content;
 }
-.footer > h2 > a {
+.footer__link--title > h2 > a {
   text-decoration: none;
   color: white;
   font-family: "Shrikhand", cursive;
   font-weight: 100;
   font-size: 1.5em;
 }
-.footer > h2:hover {
+.footer__link--title > h2:hover {
   cursor: pointer;
   transform: scale(1.02);
   transition-duration: 0.2s;
@@ -297,12 +310,6 @@ body {
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-}
-.footer__link {
-  display: flex;
-  flex-direction: column;
-  font-size: 1.2em;
-  line-height: 2rem;
 }
 .footer__link > a {
   text-decoration: none;
