--- a/sass/place1.scss
+++ b/sass/place1.scss
@@ -215,13 +215,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       text-decoration: none;
       color: black;
       margin-bottom: 1rem;
-
       > h2 {
         font-size: 1.2em;
         font-weight: 600;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
       }
       &--info {
         display: flex;
@@ -229,10 +225,12 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
         justify-content: space-between;
         align-items: center;
         line-height: 1.8em;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
         > .price {
+          padding: 0 1rem 0 0.3rem;
+          position: absolute;
+          background-color: #fff;
+          right: 0;
+          bottom: 0.95rem;
           font-weight: 500;
           transition: 0.4s ease-in-out;
         }
@@ -281,6 +279,10 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       column-gap: 5rem;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+
       // 1380px
     }
   }
@@ -300,42 +302,49 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 
 .footer {
   background-color: #353535;
-  display: flex;
-  flex-direction: column;
   padding: 1.8rem 1.8rem 4rem 1.8rem;
-  > h2 {
-    padding-bottom: 1rem;
-    transition-duration: 0.2s;
-    width: fit-content;
-    > a {
-      text-decoration: none;
-      color: white;
-      font-family: $font-title;
-      font-weight: 100;
-      font-size: 1.5em;
-    }
-    &:hover {
-      cursor: pointer;
-      transform: scale(1.02);
-      transition-duration: 0.2s;
-      background-image: linear-gradient(
-        to right,
-        $color-secondary,
-        $color-primary
-      );
-      background-size: 100%;
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      -moz-text-fill-color: transparent;
-    }
+  &__block {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1440px;
+    margin: auto;
   }
-
   &__link {
+    &--title {
+      > h2 {
+        padding: 1rem 0.5rem 1rem 0;
+        transition-duration: 0.2s;
+        width: fit-content;
+        > a {
+          text-decoration: none;
+          color: white;
+          font-family: $font-title;
+          font-weight: 100;
+          font-size: 1.5em;
+        }
+        &:hover {
+          cursor: pointer;
+          transform: scale(1.02);
+          transition-duration: 0.2s;
+          background-image: linear-gradient(
+            to right,
+            $color-secondary,
+            $color-primary
+          );
+          background-size: 100%;
+          -webkit-background-clip: text;
+          -moz-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          -moz-text-fill-color: transparent;
+        }
+      }
+    }
     display: flex;
     flex-direction: column;
     font-size: 1.2em;
     line-height: 2rem;
+
     > a {
       text-decoration: none;
       color: white;
