--- a/sass/place2.scss
+++ b/sass/place2.scss
@@ -5,7 +5,7 @@
   scroll-behavior: smooth;
 }
 body {
-  background-color: #f6f6f6;
+  background-color: #fff;
 }
 
 $font-title: "Shrikhand", cursive;
@@ -17,19 +17,23 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 
 .header {
   &__top {
-    display: flex;
+    display: grid;
     align-items: center;
-    justify-content: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1440px;
+    margin: auto;
     &--back {
-      position: absolute;
-      left: 0;
+      grid-column-start: 1;
       padding: 1.5rem;
       font-size: 1.3em;
       text-decoration: none;
       color: $text-desc;
+      margin: auto;
     }
     > img {
+      grid-column-start: 2;
       padding: 1.5rem 0 1rem 0;
+      margin: auto;
     }
   }
   &__cover {
@@ -37,10 +41,11 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     display: block;
     padding-top: 2rem;
     width: 100%;
+    overflow: hidden;
     > img {
-      height: 300px;
       width: 100%;
       object-fit: cover;
+      max-height: 550px;
     }
   }
 }
@@ -51,13 +56,14 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   background-color: #f6f6f6;
   padding: 2.2rem 1.2rem;
   border-radius: 35px 35px 0 0;
-  margin-bottom: -60px;
+  max-width: 1300px;
+  margin: auto auto -80px auto;
   &__btn {
     display: flex;
     justify-content: center;
     align-items: center;
     &--order {
-      margin-top: 30px;
+      margin: 5rem 0 5rem 0;
       border: none;
       border-radius: 100px;
       font-size: 1.1em;
@@ -130,7 +136,6 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       }
     }
   }
-
   .repas {
     padding-top: 2rem;
     &__starter {
@@ -214,13 +219,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       text-decoration: none;
       color: black;
       margin-bottom: 1rem;
-
       > h2 {
         font-size: 1.2em;
         font-weight: 600;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
       }
       &--info {
         display: flex;
@@ -228,15 +229,14 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
         justify-content: space-between;
         align-items: center;
         line-height: 1.8em;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
         > .price {
+          padding: 0 1rem 0 0.3rem;
+          position: absolute;
+          background-color: #fff;
+          right: 0;
+          bottom: 0.95rem;
           font-weight: 500;
           transition: 0.4s ease-in-out;
-          display: block;
-          white-space: nowrap;
-          text-overflow: ellipsis;
         }
         > p {
           font-size: 1em;
@@ -271,6 +271,25 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       }
     }
   }
+
+  @media screen and (min-width: 600px) and (max-width: 1380px) {
+    width: 550px;
+    margin: auto;
+    margin-bottom: -80px;
+  }
+
+  .menu {
+    @media screen and (min-width: 1380px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 5rem;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+
+      // 1380px
+    }
+  }
 }
 
 @keyframes move-card {
@@ -287,42 +306,50 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 
 .footer {
   background-color: #353535;
-  display: flex;
-  flex-direction: column;
   padding: 1.8rem 1.8rem 4rem 1.8rem;
-  > h2 {
-    padding-bottom: 1rem;
-    transition-duration: 0.2s;
-    width: fit-content;
-    > a {
-      text-decoration: none;
-      color: white;
-      font-family: $font-title;
-      font-weight: 100;
-      font-size: 1.5em;
-    }
-    &:hover {
-      cursor: pointer;
-      transform: scale(1.02);
-      transition-duration: 0.2s;
-      background-image: linear-gradient(
-        to right,
-        $color-secondary,
-        $color-primary
-      );
-      background-size: 100%;
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      -moz-text-fill-color: transparent;
-    }
+  &__block {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1440px;
+    margin: auto;
   }
-
   &__link {
+    margin: auto;
+    &--title {
+      > h2 {
+        padding: 1rem 0.5rem 1rem 0;
+        transition-duration: 0.2s;
+        width: fit-content;
+        > a {
+          text-decoration: none;
+          color: white;
+          font-family: $font-title;
+          font-weight: 100;
+          font-size: 1.5em;
+        }
+        &:hover {
+          cursor: pointer;
+          transform: scale(1.02);
+          transition-duration: 0.2s;
+          background-image: linear-gradient(
+            to right,
+            $color-secondary,
+            $color-primary
+          );
+          background-size: 100%;
+          -webkit-background-clip: text;
+          -moz-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          -moz-text-fill-color: transparent;
+        }
+      }
+    }
     display: flex;
     flex-direction: column;
     font-size: 1.2em;
     line-height: 2rem;
+
     > a {
       text-decoration: none;
       color: white;
