--- a/place1.css
+++ b/place1.css
@@ -22,6 +22,7 @@ body {
   font-size: 1.3em;
   text-decoration: none;
   color: #353535;
+  margin: auto;
 }
 .header__top > img {
   grid-column-start: 2;
@@ -283,6 +284,7 @@ body {
   margin: auto;
 }
 .footer__link {
+  margin: auto;
   display: flex;
   flex-direction: column;
   font-size: 1.2em;
