--- a/place2.css
+++ b/place2.css
@@ -6,35 +6,40 @@
 }
 
 body {
-  background-color: #f6f6f6;
+  background-color: #fff;
 }
 
 .header__top {
-  display: flex;
+  display: grid;
   align-items: center;
-  justify-content: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1440px;
+  margin: auto;
 }
 .header__top--back {
-  position: absolute;
-  left: 0;
+  grid-column-start: 1;
   padding: 1.5rem;
   font-size: 1.3em;
   text-decoration: none;
   color: #353535;
+  margin: auto;
 }
 .header__top > img {
+  grid-column-start: 2;
   padding: 1.5rem 0 1rem 0;
+  margin: auto;
 }
 .header__cover {
   margin-top: -2rem;
   display: block;
   padding-top: 2rem;
   width: 100%;
+  overflow: hidden;
 }
 .header__cover > img {
-  height: 300px;
   width: 100%;
   object-fit: cover;
+  max-height: 550px;
 }
 
 .order {
@@ -43,7 +48,8 @@ body {
   background-color: #f6f6f6;
   padding: 2.2rem 1.2rem;
   border-radius: 35px 35px 0 0;
-  margin-bottom: -60px;
+  max-width: 1300px;
+  margin: auto auto -80px auto;
 }
 .order__btn {
   display: flex;
@@ -51,7 +57,7 @@ body {
   align-items: center;
 }
 .order__btn--order {
-  margin-top: 30px;
+  margin: 5rem 0 5rem 0;
   border: none;
   border-radius: 100px;
   font-size: 1.1em;
@@ -195,9 +201,6 @@ body {
 .order .repas__card > h2 {
   font-size: 1.2em;
   font-weight: 600;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 .order .repas__card--info {
   display: flex;
@@ -205,16 +208,15 @@ body {
   justify-content: space-between;
   align-items: center;
   line-height: 1.8em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 .order .repas__card--info > .price {
+  padding: 0 1rem 0 0.3rem;
+  position: absolute;
+  background-color: #fff;
+  right: 0;
+  bottom: 0.95rem;
   font-weight: 500;
   transition: 0.4s ease-in-out;
-  display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 .order .repas__card--info > p {
   font-size: 1em;
@@ -246,6 +248,23 @@ body {
   padding: 7px 6px 6px 6px;
   border-radius: 50%;
 }
+@media screen and (min-width: 600px) and (max-width: 1380px) {
+  .order {
+    width: 550px;
+    margin: auto;
+    margin-bottom: -80px;
+  }
+}
+@media screen and (min-width: 1380px) {
+  .order .menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
 
 @keyframes move-card {
   0% {
@@ -258,23 +277,35 @@ body {
 }
 .footer {
   background-color: #353535;
-  display: flex;
-  flex-direction: column;
   padding: 1.8rem 1.8rem 4rem 1.8rem;
 }
-.footer > h2 {
-  padding-bottom: 1rem;
+.footer__block {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1440px;
+  margin: auto;
+}
+.footer__link {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2em;
+  line-height: 2rem;
+}
+.footer__link--title > h2 {
+  padding: 1rem 0.5rem 1rem 0;
   transition-duration: 0.2s;
   width: fit-content;
 }
-.footer > h2 > a {
+.footer__link--title > h2 > a {
   text-decoration: none;
   color: white;
   font-family: "Shrikhand", cursive;
   font-weight: 100;
   font-size: 1.5em;
 }
-.footer > h2:hover {
+.footer__link--title > h2:hover {
   cursor: pointer;
   transform: scale(1.02);
   transition-duration: 0.2s;
@@ -284,12 +315,6 @@ body {
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-}
-.footer__link {
-  display: flex;
-  flex-direction: column;
-  font-size: 1.2em;
-  line-height: 2rem;
 }
 .footer__link > a {
   text-decoration: none;
