--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,16 +15,29 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  @media screen and (min-width: 702px) {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    max-width: 1440px;
+    margin: auto;
+  }
   > .logo {
     align-self: center;
     align-self: center;
     width: 200px;
     padding: 1.5rem 0 1rem 0;
+    grid-column-start: 2;
+    margin: auto;
   }
   &__location {
+    grid-column-start: 1;
+    grid-row-start: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto;
     width: 100%;
     background-color: #eaeaea;
     padding: 1rem 0;
@@ -38,14 +51,14 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       text-shadow: 0px 0px 0px #626262;
     }
     @media screen and (min-width: 702px) {
-      position: absolute;
-      top: 1rem;
-      left: 2rem;
       width: fit-content;
       padding: 1rem 0.8rem 1rem 1.8rem;
       border-radius: 14px;
     }
   }
+}
+
+.headerbot {
   &__book {
     background-color: #f6f6f6;
     display: flex;
@@ -287,67 +300,68 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 }
 .footer {
   background-color: #353535;
+  padding: 1.8rem 1.8rem 4rem 1.8rem;
   &__block {
-    padding: 1.8rem 1.8rem 4rem 1.8rem;
-    > h2 {
-      padding-bottom: 1rem;
-      transition-duration: 0.2s;
-      width: fit-content;
-      > a {
-        text-decoration: none;
-        width: fit-content;
-        color: white;
-        font-family: $font-title;
-        font-weight: 100;
-        font-size: 1.5em;
-      }
-      &:hover {
-        cursor: pointer;
-        transform: scale(1.02);
-        transition-duration: 0.2s;
-        background-image: linear-gradient(
-          to right,
-          $color-secondary,
-          $color-primary
-        );
-        background-size: 100%;
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        -moz-text-fill-color: transparent;
-      }
-    }
-
-    &--link {
-      display: flex;
-      flex-direction: column;
-      font-size: 1.2em;
-      line-height: 2rem;
-      > a {
-        text-decoration: none;
-        color: white;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1440px;
+    margin: auto;
+  }
+  &__link {
+    margin: auto;
+    &--title {
+      > h2 {
+        padding: 1rem 0.5rem 1rem 0;
         transition-duration: 0.2s;
         width: fit-content;
-        > i {
-          font-size: 18px;
-        }
-        > .fa-utensils {
-          padding-right: 1rem;
-        }
-        > .fa-hands-helping {
-          padding-right: 0.55rem;
+        > a {
+          text-decoration: none;
+          color: white;
+          font-family: $font-title;
+          font-weight: 100;
+          font-size: 1.5em;
         }
         &:hover {
-          color: $color-primary;
+          cursor: pointer;
+          transform: scale(1.02);
           transition-duration: 0.2s;
+          background-image: linear-gradient(
+            to right,
+            $color-secondary,
+            $color-primary
+          );
+          background-size: 100%;
+          -webkit-background-clip: text;
+          -moz-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          -moz-text-fill-color: transparent;
         }
       }
     }
-    @media screen and (min-width: 702px) {
-      width: 1440px;
-      display: flex;
-      flex-direction: column;
-      margin: auto;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2em;
+    line-height: 2rem;
+
+    > a {
+      text-decoration: none;
+      color: white;
+      transition-duration: 0.2s;
+      width: fit-content;
+      > i {
+        font-size: 18px;
+      }
+      > .fa-utensils {
+        padding-right: 1rem;
+      }
+      > .fa-hands-helping {
+        padding-right: 0.55rem;
+      }
+      &:hover {
+        color: $color-primary;
+        transition-duration: 0.2s;
+      }
     }
   }
 }
