--- a/style.css
+++ b/style.css
@@ -10,16 +10,30 @@
   justify-content: center;
   flex-direction: column;
 }
+@media screen and (min-width: 702px) {
+  .header {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1440px;
+    margin: auto;
+  }
+}
 .header > .logo {
   align-self: center;
   align-self: center;
   width: 200px;
   padding: 1.5rem 0 1rem 0;
+  grid-column-start: 2;
+  margin: auto;
 }
 .header__location {
+  grid-column-start: 1;
+  grid-row-start: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
   width: 100%;
   background-color: #eaeaea;
   padding: 1rem 0;
@@ -35,15 +49,13 @@
 }
 @media screen and (min-width: 702px) {
   .header__location {
-    position: absolute;
-    top: 1rem;
-    left: 2rem;
     width: fit-content;
     padding: 1rem 0.8rem 1rem 1.8rem;
     border-radius: 14px;
   }
 }
-.header__book {
+
+.headerbot__book {
   background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
@@ -51,20 +63,20 @@
   text-align: center;
   padding: 2rem 2rem 3.5rem 2rem;
 }
-.header__book > h1 {
+.headerbot__book > h1 {
   font-size: 1.8em;
   padding: 1rem 0;
 }
-.header__book > p {
+.headerbot__book > p {
   color: #353535;
   font-size: 1.1em;
 }
 @media screen and (min-width: 702px) {
-  .header__book {
+  .headerbot__book {
     box-shadow: inset 0px 20px 15px -20px #bdbcbc;
   }
 }
-.header--btn {
+.headerbot--btn {
   margin-top: 30px;
   border: none;
   border-radius: 100px;
@@ -77,7 +89,7 @@
   transition: 0.3s all ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px;
 }
-.header--btn:hover {
+.headerbot--btn:hover {
   cursor: pointer;
   background-position: right top;
   transition: 0.3s all ease-in-out;
@@ -273,24 +285,35 @@
 
 .footer {
   background-color: #353535;
-}
-.footer__block {
   padding: 1.8rem 1.8rem 4rem 1.8rem;
 }
-.footer__block > h2 {
-  padding-bottom: 1rem;
+.footer__block {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1440px;
+  margin: auto;
+}
+.footer__link {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2em;
+  line-height: 2rem;
+}
+.footer__link--title > h2 {
+  padding: 1rem 0.5rem 1rem 0;
   transition-duration: 0.2s;
   width: fit-content;
 }
-.footer__block > h2 > a {
+.footer__link--title > h2 > a {
   text-decoration: none;
-  width: fit-content;
   color: white;
   font-family: "Shrikhand", cursive;
   font-weight: 100;
   font-size: 1.5em;
 }
-.footer__block > h2:hover {
+.footer__link--title > h2:hover {
   cursor: pointer;
   transform: scale(1.02);
   transition-duration: 0.2s;
@@ -301,38 +324,24 @@
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 }
-.footer__block--link {
-  display: flex;
-  flex-direction: column;
-  font-size: 1.2em;
-  line-height: 2rem;
-}
-.footer__block--link > a {
+.footer__link > a {
   text-decoration: none;
   color: white;
   transition-duration: 0.2s;
   width: fit-content;
 }
-.footer__block--link > a > i {
+.footer__link > a > i {
   font-size: 18px;
 }
-.footer__block--link > a > .fa-utensils {
+.footer__link > a > .fa-utensils {
   padding-right: 1rem;
 }
-.footer__block--link > a > .fa-hands-helping {
+.footer__link > a > .fa-hands-helping {
   padding-right: 0.55rem;
 }
-.footer__block--link > a:hover {
+.footer__link > a:hover {
   color: #9356dc;
   transition-duration: 0.2s;
-}
-@media screen and (min-width: 702px) {
-  .footer__block {
-    width: 1440px;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
