--- a/sass/place3.scss
+++ b/sass/place3.scss
@@ -30,7 +30,7 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       color: $text-desc;
       margin: auto;
     }
-    > img {
+    > .logolink {
       grid-column-start: 2;
       padding: 1.5rem 0 1rem 0;
       margin: auto;
