--- a/place1.css
+++ b/place1.css
@@ -7,6 +7,8 @@
 
 body {
   background-color: #fff;
+  min-width: 300px;
+  z-index: 10;
 }
 
 .header__top {
@@ -30,9 +32,6 @@ body {
   margin: auto;
 }
 .header__cover {
-  margin-top: -2rem;
-  display: block;
-  padding-top: 2rem;
   width: 100%;
   overflow: hidden;
 }
@@ -40,6 +39,13 @@ body {
   width: 100%;
   object-fit: cover;
   max-height: 550px;
+  transition-duration: 0.4s;
+}
+@media screen and (max-width: 400px) {
+  .header__cover > img {
+    transition-duration: 0.4s;
+    transform: scale(1.1);
+  }
 }
 
 .order {
@@ -50,6 +56,13 @@ body {
   border-radius: 35px 35px 0 0;
   max-width: 1300px;
   margin: auto auto -80px auto;
+  transition-duration: 0.4s;
+}
+@media screen and (max-width: 400px) {
+  .order {
+    transform: translateY(-50px);
+    transition-duration: 0.4s;
+  }
 }
 .order__btn {
   display: flex;
