--- a/place2.css
+++ b/place2.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #fff;
+  min-width: 300px;
 }
 
 .header__top {
@@ -30,9 +31,6 @@ body {
   margin: auto;
 }
 .header__cover {
-  margin-top: -2rem;
-  display: block;
-  padding-top: 2rem;
   width: 100%;
   overflow: hidden;
 }
@@ -40,15 +38,18 @@ body {
   width: 100%;
   object-fit: cover;
   max-height: 550px;
+  transition: 0.4s;
 }
 @media screen and (max-width: 596px) {
   .header__cover > img {
     max-height: 397px;
+    transition: 0.4s;
   }
 }
 @media screen and (max-width: 400px) {
   .header__cover > img {
     max-height: 250px;
+    transition: 0.4s;
   }
 }
 
