--- a/sass/place1.scss
+++ b/sass/place1.scss
@@ -6,6 +6,8 @@
 }
 body {
   background-color: #fff;
+  min-width: 300px;
+  z-index: 10;
 }
 
 $font-title: "Shrikhand", cursive;
@@ -37,15 +39,17 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     }
   }
   &__cover {
-    margin-top: -2rem;
-    display: block;
-    padding-top: 2rem;
     width: 100%;
     overflow: hidden;
     > img {
       width: 100%;
       object-fit: cover;
       max-height: 550px;
+      transition-duration: 0.4s;
+      @media screen and (max-width: 400px) {
+        transition-duration: 0.4s;
+        transform: scale(1.1);
+      }
     }
   }
 }
@@ -58,6 +62,11 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   border-radius: 35px 35px 0 0;
   max-width: 1300px;
   margin: auto auto -80px auto;
+  transition-duration: 0.4s;
+  @media screen and (max-width: 400px) {
+    transform: translateY(-50px);
+    transition-duration: 0.4s;
+  }
   &__btn {
     display: flex;
     justify-content: center;
