--- a/sass/place3.scss
+++ b/sass/place3.scss
@@ -6,6 +6,7 @@
 }
 body {
   background-color: #fff;
+  min-width: 300px;
 }
 
 $font-title: "Shrikhand", cursive;
@@ -37,27 +38,31 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     }
   }
   &__cover {
-    margin-top: -2rem;
-    display: block;
-    padding-top: 2rem;
     width: 100%;
     overflow: hidden;
     > img {
       width: 100%;
       object-fit: cover;
       max-height: 550px;
+      transition: 0.4s;
+      @media screen and(max-width: 600px) {
+        transform: translateY(-20px);
+        transition: 0.4s;
+        transform: scale(1.1);
+      }
     }
   }
 }
 
 .order {
   position: relative;
-  transform: translateY(-80px);
+  transform: translateY(-40px);
   background-color: #f6f6f6;
   padding: 2.2rem 1.2rem;
   border-radius: 35px 35px 0 0;
   max-width: 1300px;
-  margin: auto auto -80px auto;
+  margin: auto auto -40px auto;
+  transition: 0.4s;
   &__btn {
     display: flex;
     justify-content: center;
@@ -271,10 +276,14 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 
   @media screen and (min-width: 600px) and (max-width: 1380px) {
     width: 550px;
-    margin: auto;
+    transform: translateY(-80px);
+    transition: 0.4s;
     margin-bottom: -80px;
   }
-
+  @media screen and (min-width: 1380px) {
+    transform: translateY(-80px);
+    margin-bottom: -80px;
+  }
   .menu {
     @media screen and (min-width: 1380px) {
       display: grid;
