--- a/sass/place4.scss
+++ b/sass/place4.scss
@@ -6,6 +6,7 @@
 }
 body {
   background-color: #fff;
+  min-width: 300px;
 }
 
 $font-title: "Shrikhand", cursive;
@@ -37,15 +38,20 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     }
   }
   &__cover {
-    margin-top: -2rem;
-    display: block;
-    padding-top: 2rem;
     width: 100%;
     overflow: hidden;
     > img {
       width: 100%;
       object-fit: cover;
       max-height: 550px;
+      transition: 0.4s;
+      @media screen and (max-width: 600px) {
+        transform: translateY(-50px);
+        transition: 0.4s;
+      }
+      @media screen and (min-width: 1380px) {
+        object-fit: cover;
+      }
     }
   }
 }
@@ -273,6 +279,7 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     width: 550px;
     margin: auto;
     margin-bottom: -80px;
+    transition: 0.4s;
   }
 
   .menu {
